  - fix handling of simple-math-operators inside modifiers(Dominik, messju)
  - fix handling of trailing-slashes in open_basedir in
    smarty_core_create_dir_structure() (packman, messju)

Version 2.6.0-RC2 (Oct 8, 2003)
-------------------------------

  - apply modifiers only once to section-loop and foreach-from attrs (messju)
  - remove use of _smarty_cached_paths-files (messju)
  - remove Smarty::_plugin_implementation_exists() - use is_callable() (messju)
  - ignore {strip}/{/strip) inside {strip}-blocks (messju)
  - fixed removal of leading/trailing newlines in {strip}-blocks (messju)
  - fixed proper escaping of " and ' with escape:javascript (messju)
  - fixed bug in traversal of $smarty->plugins_dir-array. now the
    first matching plugin is taken (messju)
  - moved {strip} back into the compiler (messju)
  - fixed config_load: handling of section-attribute and use of
    multiple config-files in one template (atu, messju)

Version 2.6.0-RC1 (August 11, 2003)
-----------------------------------

  - fixed status-header for cache_modified_check under cgi-sapi (messju)
  - added optional parameter $cache_attrs to register_function() and
    register_block(). $cache_attrs is an array containing attribute-
    names that should be cached on calls to functions that have
    $cacheable set to false. (messju)
  - enabled registration of class-methods as callbacks for the register_*-
    functions (use: array('classname', 'method_name')) as callback) (messju)
  - added filepath caching (Monte)
  - added optional assign-attribute to {capture}-tag (messju)
  - added $cacheable-parameter to register_compiler_function() (messju)
  - added $cacheable-parameter with default=true to register_function()
    and register_block() (messju)
  - add math speedup to core (Dominik, Monte)
  - fix newlines for tags without template output (Monte)
  - added config-option "request_use_auto_globals" to make auto-globals be
    used as request vars instead of HTTP_*_VARS (messju)